@@ -1,6 +1,9 @@
 {
     "slaves":     [ { "name": "test-slave", "platform": "*" },
 
+                    { "name": "apple-mac-121",  "platform": "mac-mountainlion"},
+                    { "name": "apple-mac-122",  "platform": "mac-mountainlion"},
+                    { "name": "apple-mac-123",  "platform": "mac-mountainlion"},
                     { "name": "apple-mini-201", "platform": "mac-mountainlion"},
                     { "name": "apple-mini-202", "platform": "mac-mountainlion"},
                     { "name": "apple-mini-203", "platform": "mac-mountainlion"},
@@ -14,6 +17,9 @@
                     { "name": "apple-mini-218", "platform": "mac-mountainlion"},
                     
                     { "name": "apple-mac-114",  "platform": "mac-mavericks"},
+                    { "name": "apple-mac-124",  "platform": "mac-mavericks" },
+                    { "name": "apple-mac-125",  "platform": "mac-mavericks" },
+                    { "name": "apple-mac-126",  "platform": "mac-mavericks" },
                     { "name": "apple-mini-129", "platform": "mac-mavericks"},
                     { "name": "apple-mini-130", "platform": "mac-mavericks"},
                     { "name": "apple-mini-137", "platform": "mac-mavericks"},
@@ -62,7 +68,7 @@
                     { "name": "Apple MountainLion Release (Build)", "type": "Build", "builddir": "mountainlion-release",
                       "platform": "mac-mountainlion", "configuration": "release", "architectures": ["x86_64"],
                       "triggers": ["mountainlion-release-tests-wk1", "mountainlion-release-tests-wk2", "mountainlion-release-perf"],
-                      "slavenames": ["apple-mini-204"]
+                      "slavenames": ["apple-mac-121", "apple-mini-204"]
                     },
                     { "name": "Apple MountainLion Release (32-bit Build)", "type": "Build", "builddir": "mountainlion-32bit-release",
                       "platform": "mac-mountainlion", "configuration": "release", "architectures": ["i386"],
@@ -79,11 +85,11 @@
                     { "name": "Apple MountainLion Release WK1 (Tests)", "type": "Test", "builddir": "mountainlion-release-tests-wk1",
                       "platform": "mac-mountainlion", "configuration": "release", "architectures": ["x86_64"],
                       "additionalArguments": ["--no-retry-failures"],
-                      "slavenames": ["apple-mini-208"]
+                      "slavenames": ["apple-mac-122", "apple-mini-208"]
                     },
                     { "name": "Apple MountainLion Release WK2 (Tests)", "type": "TestWebKit2", "builddir": "mountainlion-release-tests-wk2",
                       "platform": "mac-mountainlion", "configuration": "release", "architectures": ["x86_64"],
-                      "slavenames": ["apple-mini-209"]
+                      "slavenames": ["apple-mac-123", "apple-mini-209"]
                     },
                     { "name": "Apple Mavericks Debug (Build)", "type": "Build", "builddir": "mavericks-debug",
                       "platform": "mac-mavericks", "configuration": "debug", "architectures": ["x86_64"],
@@ -109,16 +115,16 @@
                     { "name": "Apple Mavericks Release (Build)", "type": "Build", "builddir": "mavericks-release",
                       "platform": "mac-mavericks", "configuration": "release", "architectures": ["x86_64"],
                       "triggers": ["mavericks-release-tests-wk1", "mavericks-release-tests-wk2", "mavericks-release-perf"],
-                      "slavenames": ["apple-mini-212"]
+                      "slavenames": ["apple-mac-124", "apple-mini-212"]
                     },
                     { "name": "Apple Mavericks Release WK1 (Tests)", "type": "Test", "builddir": "mavericks-release-tests-wk1",
                       "platform": "mac-mavericks", "configuration": "release", "architectures": ["x86_64"],
                       "additionalArguments": ["--no-retry-failures"],
-                      "slavenames": ["apple-mini-129"]
+                      "slavenames": ["apple-mac-125", "apple-mini-129"]
                     },
                     { "name": "Apple Mavericks Release WK2 (Tests)", "type": "TestWebKit2", "builddir": "mavericks-release-tests-wk2",
                       "platform": "mac-mavericks", "configuration": "release", "architectures": ["x86_64"],
-                      "slavenames": ["apple-mini-130"]
+                      "slavenames": ["apple-mac-126", "apple-mini-130"]
                     },
                     {
                       "name": "Apple Mavericks Release (Perf)", "type": "DownloadAndPerfTest", "builddir": "mavericks-release-perf-tests",
